[build-system]
requires = ["setuptools~=72.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nvda-art-runtime-builder-x86"
dynamic = ["version"]
description = "NVDA Add-on Runtime for x86"
maintainers = [
	{name = "NV Access", email = "info@nvaccess.org"},
]
requires-python = ">=3.13,<3.14"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: End Users/Desktop",
	"License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
	"Operating System :: Microsoft :: Windows",
	"Programming Language :: Python :: 3",
	"Topic :: Accessibility",
]
readme = "readme.md"
license = {file = "copying.txt"}
dependencies = [
	# NVDA's runtime dependencies
	"comtypes==1.4.11",
	"cryptography==44.0.1",
	"pyserial==3.5",
	"wxPython==4.2.3",
	# pinned to a commit in tool.uv.sources
	"configobj",
	"requests==2.32.3",
	"url-normalize==1.4.3",
	"schedule==1.2.2",
	"pyro5>=5.15",
	"msgpack>=1.1.1",
	"pynacl>=1.5.0",
	"pywin32",
]

[project.urls]
Homepage = "https://www.nvaccess.org/"
Repository = "https://github.com/nvaccess/nvda.git"
Issues = "https://github.com/nvaccess/nvda/issues"

[tool.uv]
default-groups = "all"
python-preference = "only-system"
environments = ["sys_platform == 'win32'"]
required-version = ">=0.7.9"

[tool.uv.sources]
configobj = { git = "https://github.com/DiffSK/configobj", rev = "8be54629ee7c26acb5c865b74c76284e80f3aa31" }

[dependency-groups]
dev = [
	# Packaging NVDA
	"py2exe==0.14.0.0",
	"setuptools~=72.0",
]

[tool.setuptools.dynamic]
version = {attr = "buildVersionLoader.version_detailed"}

